# registercalculator

./: LICENSE  Makefile  README.md  gui_extensions.py  pyproject.toml  reg_calc.py  register.py  setup.cfg  test_register.py
.github/workflows/: pylint.yml  pytest.yml
src/: run_calculator.py
src/registercalculator/: __init__.py  gui_extensions.py  registercalculator.py
src/registercalculator/register/: __init__.py  register.py
tests/: test_register.py
