[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "registercalculator"
description = "Register calculator"
version = "1.1.1"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pytest.ini_options]
addopts = "--verbose --capture=no"
testpaths = [
    "tests",
]
