[metadata]
name = registercalculator
version = 1.0
author = Eric Fornstedt
author_email = eric.fornstedt@gmail.com
description = A tool to view and set field vaules of a 8/16/32 bit data register
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fornstedt/reg_calc
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
package_dir =
  =src

[options.packages.find]
include = .

[pycodestyle]
max-line-length = 120

[pylint.FORMAT]
max-line-length = 120
